--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 </head>
 <body>
-<input id="clickMe" type="button" value="Take Picture" onclick="takePicture();" />
-
+<h3>Engaged 12/24 - 50% engagement</h3>
+<input id="start" type="button" value="Start Headed" onclick="takePicture();" />
+<input id="stop" type="button" value="Stop Headed" onclick="takePicture();" />
 
 </body>
 <footer>
