oauth fix, Chance-Brad

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -15,7 +15,7 @@
   <script src="http://code.jquery.com/jquery-3.3.1.js"></script>
 
   <script>
-    let AWS_URL = "https://has-the-shining.auth.us-east-2.amazoncognito.com/login";
+    let AWS_URL = "https://has-the-shining.auth.us-west-2.amazoncognito.com/login";
     let options = {
       client_id: '40m2gpoj7p923kr805tht1o852',
       redirect_uri: 'http://localhost:3000/oauth',
