--- a/front-end/public/display.html
+++ b/front-end/public/display.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- Something to make this work -->
     <head>
         <script src="https://sdk.amazonaws.com/js/aws-sdk-2.179.0min.js"></script>
     </head>
